Fixed PCI module

--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,1 @@
-{"name":"galcon/pci","license":"MIT","description":"PCI module for munkireport."}
+{"name":"ofirgalcon/pci","license":"MIT","description":"PCI module for munkireport."}
