--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,1 @@
-{"name":"ofirgalcon/pci","license":"MIT","description":"PCI module for munkireport."}
+{"name":"tuxudo/pci","license":"MIT","description":"PCI module for munkireport."}
